[package]
name = "Rust-ActixWeb-Redis-API"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "3"
actix-rt = "2"
serde = "1"
serde_json = "1"
once_cell = "1"
futures = "0.3"
redis = "0.21.0"
async-trait = "0.1.51"
sentry = "0.23.0"
sentry-actix = "0.23.0"
mini-redis = "0.4"
tracing = "0.1.28"
tracing-subscriber = "0.2"
tracing-futures = "0.2.5"
actix-web-prom = "0.5"
prometheus = { version = "0.13.0", features = ["process"] }
nanoid = "0.4.0"